cmake_minimum_required(VERSION 3.29)
project(untitled1)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled1 main.cpp)
add_executable(A_Watermelon codeForces/A_Watermelon.cpp)
add_executable(A codeForces/A.cpp)
add_executable(Ai_is_comming  codechef/AICOM/Ai_is_comming.cpp)

add_executable(DIWALIDISC codechef/DIWALIDISC/DIWALIDISC.cpp)
add_executable(MoneyMaking codechef/NUGGET-Moneymaking/MoneyMaking.cpp)
add_executable(SecondLargest GeeksForGeeks/SecondLargest/SecondLargest.cpp)

add_executable(parenthesisChecker GeeksForGeeks/ParenthesisChecker/parenthesisChecker.cpp)
add_executable(MoveAllZeroEnd GeeksForGeeks/MoveAllZeroToEND/MoveAllZeroEnd.cpp)
add_executable(reverseArray GeeksForGeeks/ReverseArray/reverseArray.cpp)
add_executable(rotateArray GeeksForGeeks/RotateArray/rotateArray.cpp)
add_executable(TheNewYearMEttingFriends codeForces/TheNewYearMeetingFriends/TheNewYearMEttingFriends.cpp)
